kubernetes/kube-system/traefik/traefik.yaml
---
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  selector:
    matchLabels:
      name: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - big-raver
      # Even run this on a Pi  
      tolerations:
        - key: "pi"
          operator: Equal
          value: "false"
      # volumes:
      # - name: ssl
      #   secret:
      #     secretName: traefik-cert
      #     defaultMode: 0744
      # - name: config
      #   configMap:
          # name: traefik-conf
          # defaultMode: 0744
          # items:
          #   - key: traefik.toml
          #     path: traefik.toml
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - name: traefik-ingress-lb
        image: traefik:v2.0
        # volumeMounts:
        # - mountPath: "/ssl"
        #   name: "ssl"
        # - mountPath: "/config"
        #   name: "config"
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        - name: https
          containerPort: 443
          hostPort: 443
        - name: admin
          containerPort: 8080
          # hostPort: 8080
        - name: prometheus
          containerPort: 8082
        # securityContext:
        #   capabilities:
        #     drop:
        #     - ALL
        #     add:
        #     - NET_BIND_SERVICE
        args:
          - --api.insecure
          - --accesslog
          - --metrics=true
          # - --metrics.influxdb=true
          # - --metrics.influxdb.address="monitoring-influxdb.monitoring"
          # - --metrics.influxdb.database="traefik"
          # - --metrics.influxdb.username="bas"
          # - --metrics.influxdb.password="Example1"
          # - --metrics.influxdb.pushInterval=10s
          - --metrics.prometheus=true
          - --metrics.prometheus.entryPoint=metrics
          - --entrypoints.metrics.Address=:8082
          - --entrypoints.web.Address=:80
          - --entrypoints.websecure.Address=:443
          - --providers.kubernetesingress
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      name: web
    - port: 443
      name: https
    - protocol: TCP
      port: 8080
      name: admin
    - port: 8082
      name: prometheus
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
  - host: traefik.bas
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-ingress-service
          servicePort: admin
